# df12-www

./: .gitignore  .markdownlint-cli2.jsonc  .terraform.lock.hcl  AGENTS.md  Makefile  README.md  backend.scaleway.tfbackend.example  biome.jsonc  bun.lockb  deploy.tofu  index.html  main.tofu  outputs.tofu  package.json  providers.tofu  pyproject.toml  requirements.txt  terraform.tfvars.example  terraform.tofu  variables.tofu
.rules/: python-00.md  python-exception-design-raising-handling-and-logging.md  python-generators.md  python-pyproject.md  python-return.md  python-typing.md
config/: pages.yaml
df12_pages/: __init__.py  _constants.py  about_page.py  bump.py  cli.py  config.py  deploy.py  docs_index.py  generator.py  homepage.py  markdown_parser.py  releases.py
docs/: daisyui-v5-guide.md  deploy.md  deployment.md  df12-pages-app-design.md  netsuke-section-layouts.yaml  opentofu-coding-standards.md  opentofu-hcl-syntax-guide.md  opentofu-module-unit-testing-guide.md  scaleway-provider.md  scripting-standards.md  tailwind-v3-v4-migration-guide.md  tailwind-v4-guide.md  using-cloudflare-dns-with-opentofu.md
features/: deploy_config.feature  docs_index_first_section.feature  docs_release.feature  indented_code_blocks.feature  pages_bump.feature
public/: .df12-pages-chutoro-meta.json  .df12-pages-cmd-mox-meta.json  .df12-pages-falcon-pachinko-meta.json  .df12-pages-femtologging-meta.json  .df12-pages-netsuke-meta.json  .df12-pages-ortho-config-meta.json  .df12-pages-pg-embedded-setup-unpriv-meta.json  .df12-pages-rstest-bdd-meta.json  .df12-pages-wireframe-meta.json  about.html  df12-index-tw3.html  docs-chutoro-adding-the-crate.html  docs-chutoro-audience-and-scope.html  docs-chutoro-distance-helpers.html  docs-chutoro-error-handling.html  docs-chutoro-feature-flags-and-execution-strategies.html  docs-chutoro-implementing-data-sources.html  docs-chutoro-results-and-assignments.html  docs-chutoro-running-the-clustering-pipeline.html  docs-cmd-mox-basic-workflow.html  docs-cmd-mox-controller-configuration-and-journals.html  docs-cmd-mox-defining-expectations.html  docs-cmd-mox-environment-variables.html  docs-cmd-mox-fluent-api-reference.html  docs-cmd-mox-getting-started.html  docs-cmd-mox-parallel-execution-and-isolation.html  docs-cmd-mox-platform-support.html  docs-cmd-mox-running-tests.html  docs-cmd-mox-spies-and-passthrough-mode.html  docs-cmd-mox-stubs-mocks-and-spies.html  docs-cmd-mox-using-the-ipc-server-directly.html  docs-falcon-pachinko-advanced-proposal-composable-and-schema-driven-websocket-routing.html  docs-falcon-pachinko-conclusion.html  docs-falcon-pachinko-future-considerations-and-potential-enhancements.html  docs-falcon-pachinko-illustrative-usecase-real-time-chat-application.html  docs-falcon-pachinko-introduction.html  docs-falcon-pachinko-literature-survey-and-existing-solutions.html  docs-falcon-pachinko-proposed-design-for-falcon-websocket-extension-falcon-pachinko.html  docs-femtologging-architectural-overview.html  (+67 more)
(+83 files in other folders)
