[project]
name = "df12-pages"
version = "0.1.0"
description = "Build environment for df12 Productions web site pages"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "ISC" }
authors = [{ name = "Payton McIntosh", email = "pmcintosh@df12.net" }]
dependencies = [
    "cyclopts>=2.9",
    "Jinja2>=3.1",
    "Markdown>=3.5",
    "Pygments>=2.17",
    "requests>=2.32",
    "ruamel.yaml>=0.18",
]

[project.scripts]
pages = "df12_pages:main"

[dependency-groups]
dev = [
    "pytest",
	"pytest-xdist",
    "pytest-mock",
    "ruff",
    "pytest-timeout",
    "pytest-bdd",
    "betamax",
    "parse_type",
    "beautifulsoup4",
    "msgspec",
    "jqpy",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "F",        # Pyflakes rules
    "W",        # PyCodeStyle warnings
    "E",        # PyCodeStyle errors
    "I",        # Sort imports properly
    "UP",       # Warn if certain things can changed due to newer Python versions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "FA",       # Enforce from __future__ import annotations
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "TC",       # Enforce importing certain types in a TYPE_CHECKING block
    "PTH",      # Use pathlib instead of os.path
    "TD",       # Be diligent with TODO comments
    "A",        # detect shadowed builtins
    "BLE",      # disallow catch-all exceptions
    "S",        # disallow things like "exec"; also restricts "assert" but I just NOQA it when I really need it
    "DTZ",      # require strict timezone manipulation with datetime
    "FBT",      # detect boolean traps
    "N",        # enforce naming conventions, e.g. ClassName vs function_name
    "FURB",
    "B",
    "RUF",
    "LOG",
    "Q",
    "PT",
    "RSE",
    "PERF",
    "TRY",
    "D",
    "ANN",
]
per-file-ignores = {"**/test_*.py" = ["S101"]}
ignore = ["D205"]

[tool.ruff.lint.flake8-import-conventions]
# Declare the banned `from` imports.
banned-from = [
    "typing",
    "datetime",
    "collections.abc",
    "dataclasses",
    "enum",
    "msgspec",
]

[tool.ruff.lint.flake8-import-conventions.aliases]
datetime = "dt"
typing = "typ"
dataclasses = "dc"
"collections.abc" = "cabc"
"msgspec.json" = "msgspec_json"

[tool.ruff.lint.pydocstyle]
# Enforce NumPy docstring style
convention = "numpy"

[tool.pytest.ini_options]
# Tests automatically killed after seconds elapsed
timeout = 30
markers = [
    "playwright: marks tests that require Playwright/browser tooling",
]

[tool.uv]
package = true


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["features"]
